--- a/src/main/resources/project/licenta/library.fxml
+++ b/src/main/resources/project/licenta/library.fxml
@@ -209,32 +209,38 @@
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
+               <graphic>
+                  <ImageView fx:id="image1" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/book_white.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <Button fx:id="btnView" layoutX="16.0" layoutY="115.0" mnemonicParsing="false" onAction="#btnViewOnClick" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="    Show all the books" textAlignment="JUSTIFY" textFill="#d9e9f2">
+            <Button fx:id="btnView" layoutX="16.0" layoutY="115.0" mnemonicParsing="false" onAction="#btnViewOnClick" prefHeight="31.0" prefWidth="200.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Show all the books" textAlignment="JUSTIFY" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
+               <graphic>
+                  <ImageView fx:id="image2" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/table_white.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <Button fx:id="btnReminder" layoutX="8.0" layoutY="188.0" mnemonicParsing="false" onAction="#btnReminderOnClick" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="   Add a reminder" textAlignment="JUSTIFY" textFill="#d9e9f2">
+            <Button fx:id="btnReminder" layoutX="8.0" layoutY="188.0" mnemonicParsing="false" onAction="#btnReminderOnClick" prefHeight="31.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a reminder" textAlignment="JUSTIFY" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
+               <graphic>
+                  <ImageView fx:id="image3" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/reminder_white.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <ImageView fx:id="image1" fitHeight="22.0" fitWidth="66.0" layoutX="42.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/book_white.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="image3" fitHeight="22.0" fitWidth="66.0" layoutX="31.0" layoutY="196.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/reminder_white.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="image2" fitHeight="22.0" fitWidth="66.0" layoutX="31.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/table_white.png" />
-               </image>
-            </ImageView>
          </children>
       </AnchorPane>
    </children>
