--- a/src/main/resources/project/licenta/subjects_view.fxml
+++ b/src/main/resources/project/licenta/subjects_view.fxml
@@ -18,7 +18,7 @@
       </ImageView>
       <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="56.0" prefWidth="838.0">
          <children>
-            <ImageView fitHeight="92.0" fitWidth="931.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
+            <ImageView fitHeight="102.0" fitWidth="931.0" layoutX="-13.0" layoutY="-36.0" pickOnBounds="true">
                <image>
                   <Image url="@images/menu_background.jpg" />
                </image>
@@ -38,7 +38,7 @@
                   <Image url="@images/icon.png" />
                </image>
             </ImageView>
-            <Button fx:id="btnSemesterfee" layoutX="506.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnSemesterfeeOnClick" style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER" textFill="#d9e9f2">
+            <Button fx:id="btnSemesterfee" layoutX="506.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnSemesterfeeOnClick" style="-fx-background-color: transparent;" text="Semester fee" textAlignment="CENTER" textFill="#d9e9f2" visible="false">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
@@ -78,25 +78,6 @@
             </AnchorPane>
          </content>
       </ScrollPane>
-      <AnchorPane fx:id="paneSlider" layoutY="95.0" prefHeight="582.0" prefWidth="303.0" style="-fx-background-color: #00134d;">
-         <children>
-            <Button fx:id="btnActual" layoutX="34.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnActualOnClick" prefHeight="31.0" prefWidth="199.0" style="-fx-background-color: transparent;" text="To add actual subjects" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnOptional" layoutX="25.0" layoutY="112.0" mnemonicParsing="false" onAction="#btnOptionalOnClick" prefHeight="31.0" prefWidth="218.0" style="-fx-background-color: transparent;" text="To add optional subjects" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-            <Button fx:id="btnPrevious" layoutX="14.0" layoutY="144.0" mnemonicParsing="false" onAction="#btnPreviousOnClick" prefHeight="31.0" prefWidth="282.0" style="-fx-background-color: transparent;" text="To add subjects from previous years" textAlignment="JUSTIFY" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="15.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="102.0" prefWidth="450.0" visible="false">
          <children>
             <AnchorPane layoutX="65.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
@@ -115,6 +96,46 @@
                </font>
             </Button>
             <Label fx:id="lblNew" layoutX="28.0" layoutY="6.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="paneSlider" layoutY="95.0" prefHeight="582.0" prefWidth="257.0" style="-fx-background-color: #00134d;">
+         <children>
+            <Button fx:id="btnActual" layoutX="14.0" layoutY="51.0" mnemonicParsing="false" onAction="#btnActualOnClick" prefHeight="38.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a current subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fx:id="image1" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/subject_white.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="btnOptional" layoutX="14.0" layoutY="134.0" mnemonicParsing="false" onAction="#btnOptionalOnClick" prefHeight="38.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a optional subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fx:id="image2" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/subject_white.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="btnPrevious" layoutX="14.0" layoutY="207.0" mnemonicParsing="false" onAction="#btnPreviousOnClick" prefHeight="38.0" prefWidth="214.0" style="-fx-background-color: transparent; -fx-border-width: 3px; -fx-border-color: d9e9f2;" text="Add a previous subject" textAlignment="JUSTIFY" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+               <graphic>
+                  <ImageView fx:id="image3" fitHeight="22.0" fitWidth="66.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/subject_white.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="panePrevious" layoutX="451.0" layoutY="271.0" prefHeight="200.0" prefWidth="450.0" visible="false">
